--- a/index.html
+++ b/index.html
@@ -19,7 +19,24 @@
 </head>
 <body>
 <div id="wrapper">
-	<h1>Kimihiro Ohno</h1>
+	<header>
+		<h1>Kimihiro Ohno</h1>
+	</header>
+
+	<main>
+		<p class="description">私はフロントエンドエンジニアのkimihiroです。ここはブログ感覚で使用していきたいです。</p>
+		<div class="skill">
+			<h2>スキル</h2>
+			<ul>
+				<li>HTML5</li>
+				<li>CSS3</li>
+				<li>Jquery</li>
+				<li>Git</li>
+				<li>Bootstrap</li>
+				<li>SQL</li>
+			</ul>
+		</div>
+	</main>
 </div>
 </body>
 </html>
