--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <meta name="keywords" content="" />
 <meta name="author" content="" />
 <meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1" />
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/jquery.multiscroll.css">
 <link rel="stylesheet" type="text/css" href="css/reset.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
 <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -18,25 +18,59 @@
 
 </head>
 <body>
-<div id="wrapper">
-	<header>
-		<h1>Kimihiro Ohno</h1>
-	</header>
 
-	<main>
-		<p class="description">私はフロントエンドエンジニアのkimihiroです。ここはブログ感覚で使用していきたいです。</p>
-		<div class="skill">
-			<h2>スキル</h2>
-			<ul>
-				<li>HTML5</li>
-				<li>CSS3</li>
-				<li>Jquery</li>
-				<li>Git</li>
-				<li>Bootstrap</li>
-				<li>SQL</li>
-			</ul>
+<div id="wrapper">
+	<nav>
+		<ul>
+			<li data-menuanchor="first" class="active"><a href="#first">ABOUT</a></li>
+			<li data-menuanchor="second"><a href="#second">WORKS</a></li>
+			<li data-menuanchor="third"><a href="#third">CONTACT</a></li>
+		</ul>
+	</nav>
+	<div id="multiscroll">
+		<div class="ms-left">
+			<div class="ms-section lead">ABOUT</div>
+			<div class="ms-section contents">coming soon...</div>
+			<div class="ms-section lead">CONTACT</div>
 		</div>
-	</main>
-</div>
+		<div class="ms-right">
+			<div class="ms-section contents">
+				<p>私の名前はKimihiroです。フロントエンジニアをしています。</p>
+				<table>
+					<tr>
+						<th>name</th>
+						<td>Kimihiro Ohno</td>
+					</tr>
+					<tr>
+						<th>age</th>
+						<td>secret</td>
+					</tr>
+					<tr>
+						<th>gender</th>
+						<td>secret</td>
+					</tr>
+				</table>
+			</div>
+			<div class="ms-section lead">WORKS</div>
+			<div class="ms-section contents">coming soon...</div>
+		</div>
+	</div>
+</div><!--wrapper-->
+<!--スクリプト-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/jquery.multiscroll.min.js"></script>
+<script src="js/jquery.easings.min.js"></script>
+<script>
+//マルチスクリプト
+$(document).ready(function() {
+	$('#multiscroll').multiscroll({
+		anchors: ['first','second','third'], // アンカーリンクの設定
+		menu: 'nav', // メニューの親要素
+		paddingTop: 50, // 固定ヘッダー分の上paddingを取ることが出来ます。
+		paddingBottom: 0 // 固定フッター分の下paddingを取ることが出来ます。
+	});
+});
+</script>
+
 </body>
 </html>
