--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				<table>
 					<tr>
 						<th>Mail</th>
-						<td>kimihiro.add@gmail.com</td>
+						<td><a href="mailto:kimihiro.add@gmail.com">kimihiro.add@gmail.com</a></td>
 					</tr>
 				</table>
 				<div class="sns">
