--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <script src="js/jquery.multiscroll.min.js"></script>
 <script src="js/jquery.easings.min.js"></script>
 <script src="js/main.js"></script>
-<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+<script src="js/jquery-ui.js"></script>
 <script>
 //マルチスクリプト
 $(document).ready(function() {
