--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 				<div class="skill2">
 					<div class="skillBox">
-						<h2>使用したことがある</h2>
+						<h2>使用したことがある<span>（▼ドラッグできます）</span></h2>
 						<ul>
 							<li>HTML5
 							<li>CSS3
