--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
 					</tr>
 				</table>
 				<div class="sns">
-					<div class="fb"><a href="https://www.facebook.com/profile.php?id=100002282900973" target="_blank"><img src="images/fb.png" alt="facebook" width="25"></a></div>
+					<div class="fb"><a href="https://www.facebook.com/profile.php?id=100002282900973" target="_blank"><img src="images/fb.png" alt="facebook" width="20">facebook</a></div>
+					<div class="github"><a href="https://github.com/kimihiro222" target="_blank"><img src="images/github.png" alt="facebook" width="25">github</a></div>
 				</div>
 			</div>
 		</div>
